[tool.poetry]
name = "pjdsc"
version = "0.1.0"
description = ""
authors = ["ralf-t <tabo.ralfmartin@ue.edu.ph>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.2"
notebook = "^6.4.11"
scipy = "^1.8.1"
openpyxl = "^3.0.10"
pandas-profiling = {extras = ["notebook"], version = "^3.2.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
